tests/error/addInteger-data-wrong-1st-argument.uplc
(program 1.0.0[[(builtin addInteger)(con data {ByteString #AFD3})](con integer 10)])